# update_dns_records

./: .gitignore  Cargo.toml  README.md  update_dns_records.example.json  update_dns_records.results.example.json  update_ip.example.json
.github/workflows/: build.yml
cloudflare/: Cargo.toml
cloudflare/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
domain_services/: Cargo.toml
domain_services/src/: lib.rs
dyndns2/: Cargo.toml
dyndns2/src/: lib.rs
ip_services/: Cargo.toml
ip_services/src/: address_as_body.rs  lib.rs
requests/: Cargo.toml
requests/src/: lib.rs
results/: Cargo.toml
results/src/: lib.rs
src/: config.rs  main.rs  requests.rs  results.rs
src/domain_services/: README.md  cloudflare.rs  dyndns2.rs  mod.rs
src/domain_services/cloudflare/: mod.rs
src/domain_services/dyndns2/: mod.rs
src/dyndns2/: mod.rs
src/ip_services/: address_as_body.rs  mod.rs
src/toolkit/: Cargo.toml  config.rs  domain_services.rs  ip_services.rs  mod.rs  requests.rs  results.rs
src/toolkit/domain_services/: cloudflare.rs  dyndns2.rs  mod.rs
update_dns_records/: Cargo.toml
update_dns_records/src/: main.rs
update_ip/: Cargo.toml
update_ip/src/: main.rs
v0.1/: find_ip.example.json  find_ip.results.example.json  update_ip.example.json  update_ip.results.example.json
v0.1/update_ip/: Cargo.toml
v0.1/update_ip/src/: config.rs  dyndns2.rs  main.rs  requests.rs  results.rs
v0.1/update_ip/src/domain_services/: cloudflare.rs  dyndns2.rs  mod.rs  squarespace.rs
v0.1/update_ip/src/ip_services/: address_as_body.rs  mod.rs
v0.1/update_ip/src/type_flyweight/: cloudflare.rs  config.rs  dyndns2.rs  mod.rs  results.rs  tester.rs
v0.1/update_up_types/: Cargo.toml
