[workspace]
members = [ "cloudflare", "config", "domain_services", "dyndns2", "ip_services", "requests","results"]

[workspace.dependencies]
serde_json = "1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = { version = "0.3.1" }
hyper-util = { version = "0.1", features = ["full"] }
native-tls = "0.2"
http = "1.0.0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
rand = "0.8.5"
base64 = { version = "0.21" }


[workspace.features]
default = ["dyndns2", "cloudflare"]
dyndns2 = []
cloudflare = []