[package]
name = "update_dns_records"
version = "0.2.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
bytes = "1.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.51", features = ["full"] }
tokio-native-tls = { version = "0.3" }
hyper-util = { version = "0.1", features = ["full"] }
native-tls = "0.2"
hyper = { version = "1.9", features = ["full"] }
http-body-util = "0.1"
rand = "0.8"
base64 = { version = "0.22" }

[features]
default = ["cloudflare", "dyndns2"]
cloudflare = []
dyndns2 = []