[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

ip_services = { path = "../ip_services" }
# cloudflare = { path = "../cloudflare" }
dyndns2 = { path = "../dyndns2" }

[features]
default = []
dyndns2 = []
cloudflare = []