[package]
name = "requests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
native-tls = { workspace = true }
results = { path = "../results" }
serde = { workspace = true }
tokio = { workspace = true }
tokio-native-tls = { workspace = true }
