[package]
name = "update_ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
# domain_services = { path = "../domain_services" }
ip_services = { path = "../ip_services" }
results = { path = "../results" }
tokio = { workspace = true }
