[package]
name = "toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
native-tls = { workspace = true }
tokio = { workspace = true }
tokio-native-tls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }