[package]
name = "update_ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = { version = "0.3.1" }
hyper-util = { version = "0.1", features = ["full"] }
native-tls = "0.2"
http = "1.0.0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
rand = "0.8.5"

## stretch
#		import support conditionally based on features
